# mdcmp

./: .gitignore  LICENSE  MDC_FORMAT_SPEC.md  PROGRESSIONS.md  README.md  pyproject.toml
data/compositions/: 0.comp  1.comp  2.comp  3.comp  lofi1.comp  rnb.comp
data/drums/: 0.drum  1.drum  2.drum
data/drums/lofi/: hat1.loop  hat2.loop  kick1.loop  kick2.loop  snare1.loop  snare2.loop  snare3.loop
data/mdc/misc/: test.mdc  test1.mdc  test2.mdc
data/progressions/: jazz.txt  lofi.txt  lofi2.txt  rnb.txt
docs/: GRID.md  MDC_FORMAT_SPEC.md  PROGRESSIONS.md
examples/: test-grid-write-convert.py
scripts/: genbeat.py  geninstrument.py  test-grid.py
src/mdcmp/: cli.py  composer.py  constants.py  converter.py  drummap.py  drummer.py  exceptions.py  grid.py  util.py
